<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/start"
        android:title="list"
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/itemUpdate"
                android:title="@string/update"
                android:icon="@drawable/ic_autorenew_black_24dp"
                app:showAsAction="always" />
            <item
                android:id="@+id/itemHome"
                android:title="@string/home"
                android:icon="@drawable/ic_home_black_24dp"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/itemHistory"
                android:title="@string/history"
                android:icon="@drawable/ic_history_black_24dp"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/itemLink"
                android:title="@string/link"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/itemOut"
                android:title="@string/open_extern"
                app:showAsAction="ifRoom"
                />
            <item
                android:id="@+id/itemAbout"
                android:title="@string/web_view"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

</menu>